# multithreaded-histogram-equalization-cpp

./: .gitignore  CMakeLists.txt  README.md  hist_equal.cpp
